--- a/html-forms/index.html
+++ b/html-forms/index.html
@@ -4,8 +4,8 @@
   <title>HTML-Forms</title>
 </head>
 <body>
+  <h1>Coding Form!</h1>
   <form>
-    <h1>Coding Form!</h1>
     <div>
       <label for="email">Email</label>
       <div>
@@ -13,10 +13,10 @@
       </div>
     </div>
     <div>
-      <span>Why is coding cool?</span>
+      <label for="question">Why is coding cool?</label>
       <div>
-        <select name="options">
-          <option value="Select an option">Select an option</option>
+        <select id="question" name="options">
+          <option value="">Select an option</option>
           <option value="Because it's interesting">Because it's interesting</option>
           <option value="Because it's fun">Because it's fun</option>
           <option value="Because it's powerful">Because it's powerful</option>
@@ -25,33 +25,29 @@
     </div>
     <div>
       <p>Favortie Language (choose one)</p>
-      <p>
-        <label for="HTML">
-          <input type="radio" id="HTML" name="HTML" value="HTML"> HTML
-        </label>
-        <label for="CSS">
-          <input type="radio" id="CSS" name="CSS" value="CSS"> CSS
-        </label>
-        <label for="JavaScript">
-          <input type="radio" id="JavaScript" name="JavaScript" value="JavaScript"> JavaScript
-        </label>
-      </p>
+      <label>
+        <input type="radio" name="HTML" value="HTML"> HTML
+      </label>
+      <label>
+        <input type="radio" name="CSS" value="CSS"> CSS
+      </label>
+      <label>
+        <input type="radio" name="JavaScript" value="JavaScript"> JavaScript
+      </label>
     </div>
     <div>
       <p>Would you like to sign up for more information?</p>
-      <p>
-        <label for="sign-up">
-          <input type="checkbox" id="sign-up" name="submit" value="sign-up">Sign me up!
-        </label>
-      </p>
+      <label>
+        <input type="checkbox" name="submit" value="sign-up">Sign me up!
+      </label>
+    </div>
+    <div>
       <label for="comments">Comments</label>
       <div>
         <textarea name="comments" id="comments" cols="30" rows="8"></textarea>
       </div>
-      <label for="submit">
-        <input type="submit" id="submit" name="submit" value="Submit">
-      </label>
     </div>
+    <input type="submit" name="submit" value="Submit">
   </form>
 </body>
 </html>
