--- a/javascript-modal/index.html
+++ b/javascript-modal/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="container brightness-dark">
+  <div class="container">
     <div class="row">
       <button class="modal-button">Open Modal</button>
     </div>
