utilized position property to overlay the content of the page. restructured style classes.

--- a/javascript-modal/index.html
+++ b/javascript-modal/index.html
@@ -12,7 +12,7 @@
     <div class="row">
       <button class="modal-button">Open Modal</button>
     </div>
-    <div class="row justify-center align-center height-70">
+    <div class="row modal-layout">
       <div class="modal display-none">
         <div class="row">
           <h2>Would you like to take a survey?</h2>
